# amethyst-imgui

./: .agignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  renderdoc.cap  rustfmt.toml
compiled/: imgui.frag.spv  imgui.vert.spv
examples/: demo_custom_texture.rs  demo_overlay.rs  demo_window.rs  display.ron
src/: lib.rs  pass.rs  winit_support.rs
src/shaders/: frag-correct.glsl  frag.glsl  imgui.frag  imgui.vert  vertex.glsl
