[package]
name = "amethyst-imgui"
version = "0.4.0"
description = "imgui library for amethyst"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>", "Walter Pearce <jaynus@gmail.com>"]
repository = "https://github.com/jaynus/amethyst-imgui"
readme = "README.md"
edition = "2018"

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]

[dependencies]
amethyst = { version = "0.12", features = ["shader-compiler"] }
#amethyst = { path = "../amethyst", features = ["nightly", "saveload", "vulkan", "gltf", "experimental-spirv-reflection", "shader-compiler", "tiles"] }
lazy_static = "1.3"
derivative = "1.0"
failure = "0.1"

imgui = { version = "0.1" }
imgui-winit-support = { version = "0.1" }

[[example]]
name = "demo_window"
path = "examples/demo_window.rs"

