[package]
name = "amethyst-imgui"
version = "0.5.0"
description = "imgui library for amethyst"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>", "Walter Pearce <jaynus@gmail.com>"]
repository = "https://github.com/jaynus/amethyst-imgui"
readme = "README.md"
edition = "2018"

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]
docking = []

[dependencies]
imgui = { version = "0.2" }
imgui-winit-support = { version = "0.2" }
amethyst = { version = "0.13", features = ["shader-compiler"] }
#amethyst = { path = "../amethyst", features = ["nightly", "saveload", "vulkan", "gltf", "experimental-spirv-reflection", "shader-compiler", "tiles"] }

# For docking support
#imgui = { git = "https://github.com/jaynus/imgui-rs", branch"="docking" }
#imgui-winit-support = { git = "https://github.com/jaynus/imgui-rs", branch"="docking" }

lazy_static = "1.3"
derivative = "1.0"
failure = "0.1"

[[example]]
name = "demo_window"
path = "examples/demo_window.rs"

